// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Checked story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        checked=""
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="3"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
    <label
      class="label label--lg"
      data-bootstrap-override="label"
      for="3"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Default story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="1"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
    <label
      class="label label--lg"
      data-bootstrap-override="label"
      for="1"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> Disabled story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <table
    style="border-spacing: 2rem;"
  >
    <tbody>
      <tr>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper input__wrapper--disabled"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                disabled=""
                id="11"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon checkbox__icon--disabled"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg label--disabled"
              data-bootstrap-override="label"
              for="11"
            >
              Disabled
            </label>
          </div>
        </td>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="13"
                readonly=""
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="13"
            >
              Default
            </label>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper input__wrapper--disabled"
            >
              <input
                checked=""
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                disabled=""
                id="15"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon checkbox__icon--disabled"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg label--disabled"
              data-bootstrap-override="label"
              for="15"
            >
              Disabled
            </label>
          </div>
        </td>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                checked=""
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="17"
                readonly=""
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="17"
            >
              Default
            </label>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper input__wrapper--disabled"
            >
              <input
                aria-checked="mixed"
                checked=""
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                disabled=""
                id="19"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon checkbox__icon--disabled"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg label--disabled"
              data-bootstrap-override="label"
              for="19"
            >
              Disabled
            </label>
          </div>
        </td>
        <td>
          <div
            class="checkbox"
          >
            <span
              class="input__wrapper"
            >
              <input
                aria-checked="mixed"
                checked=""
                class="checkbox__input"
                data-bootstrap-override="checkbox"
                id="21"
                readonly=""
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="icon checkbox__icon"
                fill="currentColor"
                height="1.5rem"
                style="--icon-size: 1.5rem;"
                viewBox="0 0 24 24"
                width="1.5rem"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
                />
              </svg>
            </span>
            <label
              class="label label--lg"
              data-bootstrap-override="label"
              for="21"
            >
              Default
            </label>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Checkbox /> Disabled story renders snapshot 2`] = `
<div
  class="checkbox"
>
  <span
    class="input__wrapper input__wrapper--disabled"
  >
    <input
      class="checkbox__input"
      data-bootstrap-override="checkbox"
      disabled=""
      id="44"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="icon checkbox__icon checkbox__icon--disabled"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
      />
    </svg>
  </span>
  <label
    class="label label--lg label--disabled"
    data-bootstrap-override="label"
    for="44"
  >
    Disabled
  </label>
</div>
`;

exports[`<Checkbox /> Indeterminate story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-checked="mixed"
        checked=""
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="9"
        readonly=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
    <label
      class="label label--lg"
      data-bootstrap-override="label"
      for="9"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> LongLabels story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="longlabels--grid"
  >
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          id="35"
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="icon checkbox__icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
          />
        </svg>
      </span>
      <label
        class="label label--lg"
        data-bootstrap-override="label"
        for="35"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          id="37"
          readonly=""
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="icon checkbox__icon"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
          />
        </svg>
      </span>
      <label
        class="label label--md checkbox__label--md"
        data-bootstrap-override="label"
        for="37"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper input__wrapper--disabled"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          disabled=""
          id="39"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="icon checkbox__icon checkbox__icon--disabled"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
          />
        </svg>
      </span>
      <label
        class="label label--lg label--disabled"
        data-bootstrap-override="label"
        for="39"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper input__wrapper--disabled"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          disabled=""
          id="41"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="icon checkbox__icon checkbox__icon--disabled"
          fill="currentColor"
          height="1.5rem"
          style="--icon-size: 1.5rem;"
          viewBox="0 0 24 24"
          width="1.5rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
          />
        </svg>
      </span>
      <label
        class="label label--md label--disabled checkbox__label--md"
        data-bootstrap-override="label"
        for="41"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </label>
    </div>
  </div>
</div>
`;

exports[`<Checkbox /> Medium story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="5"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
    <label
      class="label label--md checkbox__label--md"
      data-bootstrap-override="label"
      for="5"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> MediumChecked story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        checked=""
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="7"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
    <label
      class="label label--md checkbox__label--md"
      data-bootstrap-override="label"
      for="7"
    >
      Checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> WithCustomPositioning story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    style="display: flex; align-items: center;"
  >
    <label
      class="label label--lg"
      data-bootstrap-override="label"
      for="test"
    >
      Label on Left
    </label>
    <span
      class="input__wrapper"
    >
      <input
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="test"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`<Checkbox /> WithoutVisibleLabel story renders snapshot 1`] = `
<div
  style="margin: 0.25rem;"
>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-label="a checkbox has no name"
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="23"
        readonly=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-label="a checkbox has no name"
        checked=""
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="25"
        readonly=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper"
    >
      <input
        aria-checked="mixed"
        aria-label="a checkbox has no name"
        checked=""
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        id="27"
        readonly=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        aria-label="a checkbox has no name"
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        disabled=""
        id="29"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon checkbox__icon--disabled"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 21V3H21V21H3ZM5 19H19V5H5V19Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        aria-label="a checkbox has no name"
        checked=""
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        disabled=""
        id="31"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon checkbox__icon--disabled"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.6 16.2L17.65 9.15L16.25 7.75L10.6 13.4L7.75 10.55L6.35 11.95L10.6 16.2ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="checkbox"
  >
    <span
      class="input__wrapper input__wrapper--disabled"
    >
      <input
        aria-checked="mixed"
        aria-label="a checkbox has no name"
        checked=""
        class="checkbox__input"
        data-bootstrap-override="checkbox"
        disabled=""
        id="33"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="icon checkbox__icon checkbox__icon--disabled"
        fill="currentColor"
        height="1.5rem"
        style="--icon-size: 1.5rem;"
        viewBox="0 0 24 24"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 13H17V11H7V13ZM3 21V3H21V21H3Z"
        />
      </svg>
    </span>
  </div>
</div>
`;
